--- a/conference-dashboard-react/src/App.css
+++ b/conference-dashboard-react/src/App.css
@@ -60,7 +60,7 @@
   right: 0;
   min-height: 100%;
   transition: right 0.3s ease-in-out;
-  background-color: lightgoldenrodyellow;
+  background-color: #D9D9D9;
 }
 .new-paper-content {
   position: absolute;
@@ -84,7 +84,8 @@
   margin-left: 1vw; 
 }
 .details-of-paper {
-  background-color: lightblue;
+  border-radius: 20px;
+  background-color: #F6FBF4;
 }
 
 .sidebar.open {
@@ -130,6 +131,7 @@
   border-radius: 12px ;
 }
 
+/* =========== PAPERS =========== */
 
 /* body #root #App #dashboard .row .col .container  .add-paper-btn {
   background-color:#F66B0E  ;
@@ -172,8 +174,6 @@ body #root #App #dashboard .row .col .container  .add-paper-btn:hover {
 
 body #App #dashboard .row .col .papers-content .container #papers-table .table .papers-table-header{
   color: #9D9D9D;
-  justify-content: center; /* center the content horizontally */
-  align-items: center; /* center the content vertically */
   height: 10vh;
   
 }
@@ -243,4 +243,194 @@ body #App #dashboard .row .col .papers-content .container #papers-table .table .
   color: #9D9D9D;
 
   
+}
+
+/* ======Paper Details====== */
+.paper-details-judge-header {
+  padding: 4vh 2vw 2vh 0vw;
+}
+.paper-details-judge-header .btn {
+      /* width: 130px; */
+      height: 40px;
+      /* font-family: 'Roboto', sans-serif; */
+      display: inline-block;
+      font-size: 1.1em;
+      letter-spacing: 2.5px;
+      font-weight: 500;
+      color: #000;
+      background-color: #fff;
+      border: none;
+      border-radius: 15px;
+      box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+      transition: all 0.3s ease 0s;
+      cursor: pointer;
+      outline: none;
+      margin-bottom: 2vh;
+      padding: 0.4vh 2vh 2vh 2vh;
+}
+
+.paper-details-judge-header .btn:hover {
+  background-color: #F66B0E ;
+  box-shadow: 0px 15px 20px #e0641173;
+  transform: translateY(-2px);
+}
+.paper-details-judge-header .btn:focus { 
+  background-color: #F66B0E ;
+  box-shadow: 0px 15px 20px #e0641173;
+  transform: translateY(-2px);
+}
+/* keep this for select option */
+/* .paper-details-judge-header .btn:focus, select:focus { 
+  background-color: #F66B0E ;
+  box-shadow: 0px 15px 20px #e0641173;
+  transform: translateY(-2px);
+} */
+
+
+/* when toggle in checked */
+input[type=checkbox]:checked + label{ 
+  background-color: #F66B0E;
+ }
+ input[type=checkbox]:focus +label{
+  outline: none;
+  box-shadow:none !important;
+  border:1px solid #ccc !important;
+
+ }
+ input[type=checkbox]:hover +label{
+  outline: none;
+  border:1px solid #F66B0E ;
+  color: #fff;
+  background-color: #F66B0E ;
+  box-shadow: 0px 15px 20px #e0641173 !important;
+  transform: translateY(-2px);
+
+ }
+
+ .details-of-paper .btn {
+        height: 40px;
+        display: inline-block;
+        font-size: 1.1em;
+        letter-spacing: 2.5px;
+        font-weight: 500;
+        color: #000;
+        background-color: #D9D9D9;
+        border: none;
+        border-radius: 15px;
+        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+        transition: all 0.3s ease 0s;
+        cursor: pointer;
+        outline: none;
+        margin-bottom: 2vh;
+        padding: 0.4vh 2vh 2vh 2vh;
+ }
+ .details-of-paper .btn:hover {
+  
+    background-color: #F66B0E ;
+    box-shadow: 0px 15px 20px #e0641173;
+    transform: translateY(-2px);
+ }
+ .details-of-paper .btn:focus{
+    outline: none;
+    /* width: 130px; */
+    height: 40px;
+    /* font-family: 'Roboto', sans-serif; */
+    display: inline-block;
+    font-size: 1.1em;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #D9D9D9;
+    border: none !important;
+    border-radius: 15px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1) !important;
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    margin-bottom: 2vh;
+    padding: 0.4vh 2vh 2vh 2vh;  
+ }
+
+ #assign-judge .judges-select { 
+  border-radius: 15px 0 0 15px ;
+ }
+
+ #button-remove {
+  border-radius: 0 15px 15px 0;
+  background-color: #fff;
+ }
+
+ #button-remove:hover {
+  background-color: #f30202;
+  border-color: #f30202;
+  box-shadow: 0px 15px 20px #bd020246;
+ }
+#button-addon2 {
+  height: 40px;
+  display: inline-block;
+  font-size: 1.1em;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  margin-bottom: 2vh;
+  padding: 0.4vh 2vh 2vh 2vh;
+ }
+#button-addon2:hover {
+  background-color: #F66B0E ;
+  box-shadow: 0px 15px 20px #e0641173;
+  color: #fff;
+  transform: translateY(-2px);
+}
+
+#button-delete {
+  height: 40px;
+  display: inline-block;
+  font-size: 1.1em;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #fff;
+  background-color: #ce0e0e;
+  border: none;
+  border-radius: 12px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  margin-bottom: 2vh;
+}
+
+#button-delete:hover {
+background-color: #f30202 ;
+box-shadow: 0px 15px 20px #e0641173;
+transform: translateY(-2px);
+}
+
+#button-cancel {
+  height: 40px;
+  display: inline-block;
+  font-size: 1.1em;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #fff;
+  background-color: #9D9D9D;
+  border: none;
+  border-radius: 12px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  margin-bottom: 2vh;
+}
+
+#button-cancel:hover {
+  background-color: #F66B0E ;
+  box-shadow: 0px 15px 20px #e0641173;
+  color: #fff;
+  transform: translateY(-2px);
 }
