--- a/conference-dashboard-react/src/App.css
+++ b/conference-dashboard-react/src/App.css
@@ -6,33 +6,38 @@
   height: 60px;
   background-color: lightcoral;
 } */
-.dashboard {
-  background-color: yellow;
-}
 
-.navbar-nav {
-  list-style-type: none;
-  }
+ /* =================== SIDEBAR ===================*/
+
+#sidebar .sidebar-item {
+	font-size: 2vmax;
+  height: 8vh;  
+  padding: 0.5vh 1vw 0.5vh 1vw;
+}
 .sidebar {
   position: fixed;
   top: 0;
-  right: 0;
+  right: -15.5vw;
   height: 100%;
-  width: 15vw;
+  width: 15.5vw;
+  z-index: 1;
   transition: right 0.3s ease-in-out;
   background: #0B1F2D;
   border-radius: 12px 0px 0px 12px;
 }
+.sidebar.open {
+  right: 0;
+}
 
 /* button for sidebar toggle */
 #sidebar .sidebar-toggle{
+  font-size: 1.4em;
   position: fixed;
   top: 2vh;
   right: 1vw;
-  z-index: 1;
-  background-color: #2C4F66;
-  color: white ;
-  border-color: #2C4F66;
+  z-index: 2;
+  background-color: #0B1F2D;
+  border-color: #0B1F2D;
   border-radius: 12px;
 }
 #sidebar .sidebar-toggle:focus{
@@ -41,6 +46,29 @@
   border:none !important;
 
  }
+ /* .nav-link {
+	font-size: 1.4em;
+  height: 8vh;
+
+} */
+
+.link-of-nav {
+  text-decoration: none ;
+  list-style-type: none;
+  color:white;
+}
+.link-of-nav:hover {
+  color:white;
+}
+#sidebar .nav-link {
+  margin: 1vh 0 1vh 0;
+}
+#sidebar .nav-link:active,
+#sidebar .nav-link:focus,
+#sidebar .nav-link:hover {
+	background-color: #2c4f665d;
+  
+}
 .content {
   position: absolute;
   top: 0;
@@ -95,9 +123,7 @@
   background-color: #F6FBF4;
 }
 
-.sidebar.open {
-  right: 0;
-}
+
 .content.open {
   right: 15vw;
 
@@ -118,25 +144,7 @@
   right: 15vw;
 
 }
-.nav-link {
-	font-size: 1.4em;
-  height: 8vh;
 
-}
-.link-of-nav {
-  text-decoration: none ;
-  list-style-type: none;
-  color:white;
-}
-.link-of-nav:hover {
-  color:white;
-}
-.nav-link:active,
-.nav-link:focus,
-.nav-link:hover {
-	background-color: #2C4F66;
-  border-radius: 12px ;
-}
 
 /* =========== PAPERS =========== */
 
@@ -228,7 +236,7 @@ body #root #App #dashboard .row .col .container  .add-paper-btn:hover {
   letter-spacing: 2.5px;
   font-weight: 500;
   color: #000;
-  background-color: #fff;
+  background-color: #D9D9D9;
   border: none;
   border-radius: 15px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
@@ -566,7 +574,7 @@ transform: translateY(-2px);
 }
 
 #main-page .row .main-page-card .main-page-card-btn {
-  min-width: 8vw;
+  min-width: 5vw;
   min-height: 8vh;
   /* font-family: 'Roboto', sans-serif; */
   display: inline-block;
@@ -581,7 +589,7 @@ transform: translateY(-2px);
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
-  margin: 2vh 0 1vh 0;
+  margin: 2vh 0 0 0;
 }
 #main-page .row .main-page-card .main-page-card-btn:hover {
   background-color: #F66B0E ;
@@ -592,4 +600,126 @@ transform: translateY(-2px);
 }
 #main-page .row .main-page-header {
   padding: 2vh 0 0 3vw;
+}
+
+#main-page .logout-btn  {
+  display: inline-block;
+  font-size: 1em;
+  min-height: 40px;
+
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  margin: 1.5vh 0 0 1.5vw;
+
+}
+#main-page .logout-btn:hover {
+  background-color: #F66B0E ;
+  box-shadow: 0px 15px 20px #e0641173;
+  color: #fff;
+  transform: translateY(-2px);
+
+}
+/*  ================== navbar ================== */
+#nav-bar .navbar .logout-btn  {
+  display: inline-block;
+  font-size: 1em;
+  min-height: 40px;
+
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000 !important;
+  background-color: #fff ;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  margin: 1.5vh 0 0 1.5vw;
+
+}
+#nav-bar .logout-btn:hover {
+  background-color: #F66B0E ;
+  box-shadow: 0px 15px 20px #e0641173;
+  color: #fff;
+  transform: translateY(-2px);
+
+}
+#nav-bar .whole-navbar{
+  background: #0B1F2D ;
+
+}
+
+/*  ================== Signup ================== */
+#Signup {
+  background-color: #D9D9D9;
+}
+#Signup .signup-container {
+  margin-top: 2vh;
+  background-color: #fff;
+  height: 'auto';
+  border-radius: 15px;
+}
+#Signup .css-1s2u09g-control {
+  border-radius: 15px;
+}
+#Signup .css-1s2u09g-control:focus{
+  outline: none;
+  box-shadow:none !important;
+  border:none !important;
+}
+#Signup input {
+  border-radius: 15px;
+}
+#Signup .signup-btn{
+  /* width: 130px; */
+  height: 40px;
+  /* font-family: 'Roboto', sans-serif; */
+  display: inline-block;
+  font-size: 1.1em;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #D9D9D9;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  margin-top: 2vh;
+}
+#Signup .signup-btn:hover {
+  /* background-color: #2EE59D; */
+  background-color: #F66B0E ;
+  /* box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4); */
+  box-shadow: 0px 15px 20px #e0641173;
+
+  color: #fff;
+  transform: translateY(-5px);
+
+}
+
+/*  ================== Send Feedback ================== */
+.details-of-paper input {
+  border-radius: 15px;
+}
+.send-feedback-margin {
+  margin-top: 7vh;
+}
+.details-of-paper #description {
+  border-radius: 15px;
+  margin-bottom: 2vh;
+}
+.details-of-paper .send-feedback-header {
+  margin-top: 5vh;
+  padding-top: 3vh;
 }
