--- a/conference-dashboard-react/src/App.css
+++ b/conference-dashboard-react/src/App.css
@@ -10,8 +10,8 @@
  /* =================== SIDEBAR ===================*/
 
 #sidebar .sidebar-item {
-	font-size: 2vmax;
-  height: 8vh;  
+	font-size: 1.7vmax;
+  max-height: 8vh;  
   padding: 0.5vh 1vw 0.5vh 1vw;
 }
 .sidebar {
@@ -726,4 +726,11 @@ transform: translateY(-2px);
 .details-of-paper .send-feedback-header {
   margin-top: 5vh;
   padding-top: 3vh;
+}
+/*  ================== Homepage ================== */
+#Homepage {
+  background-color: #D9D9D9;
+}
+#Homepage .carousel-inner {
+border-radius: 12px ;
 }
