--- a/conference-dashboard-react/src/App.css
+++ b/conference-dashboard-react/src/App.css
@@ -834,3 +834,172 @@ border: 1px solid rgba(255, 255, 255, 0.3);
   background: #4981a883
 ;
 }
+
+/*  ================== Tabs ================== */
+/* .nav-tabs .nav-item .nav-link {
+  background-color: rgba(255, 255, 255, 0.56);
+  color: black;
+  border-radius: 8px 8px 0 0;
+} */
+
+/* .nav-tabs .nav-item .nav-link {
+  background-color: rgba(255, 255, 255, 0.56);
+  color: black;
+	border-bottom: 50px solid #555;
+	border-left: 25px solid transparent;
+	border-right: 25px solid transparent;
+	height: 0;
+} */
+
+.nav-tabs .nav-item .nav-link.active {
+  background-color: #F66B0E;
+  border: 2px solid #F66B0E;
+  color: #000;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 2px 2px 5px #000000;
+  -moz-box-shadow: 2px 2px 5px #000000;
+  box-shadow: 2px 2px 5px #000000;
+
+  }
+  .tab .nav-tabs .line-1 {
+    width: 80vw ;
+    height: 2px;
+    border-bottom: 4px solid rgba(255, 255, 255, 0.55);
+    position: absolute;
+    margin-top: 78px;
+
+    -webkit-border-radius: 9px;
+    -moz-border-radius: 9px;
+    border-radius: 9px;
+    /* -webkit-box-shadow: 3px 3px 3px #cfcfcfb7;
+    -moz-box-shadow: 3px 3px 3px #cfcfcfb7;
+    box-shadow: 3px 3px 3px #cfcfcfb7; */
+
+    background: rgba(255, 255, 255, 0.36);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4.6px);
+    -webkit-backdrop-filter: blur(4.6px);
+  }  
+  a:hover,a:focus{
+    outline: none;
+    text-decoration: none;
+}
+.tab .nav-tabs{ border-bottom: 1px solid #D9D9D9; }
+
+.tab .nav-tabs li a:hover,
+.tab .nav-tabs li.active a{
+    border: 1px 3px 1px 3px solid #fff;
+    background-color: #fff ;
+}
+/* .tab .nav-tabs .down {
+  display: block;
+  padding: 10px;
+  border: 1px solid #593082;
+  border-radius: 10px;
+  background: #fff;
+  font-weight: 500;
+  color: #F66B0E;
+  text-align: center;
+  z-index: 1;
+  position: relative;
+  transition: all 0.3s ease 0s;  
+  margin-top: 112px;
+  
+} */
+.tab .nav-tabs .down {
+  display: block;
+  padding: 10px;
+  font-weight: 500;
+  color: black;
+  text-align: center;
+  z-index: 1;
+  position: relative;
+  transition: all 0.3s ease 0s;  
+  margin-top: 112px;
+  font-size: 1.2vw;
+  background: rgba(255, 255, 255, 0.12);
+border-radius: 10px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(0.5px);
+-webkit-backdrop-filter: blur(0.5px);
+border: 1px solid rgba(255, 255, 255, 0.28);
+}
+.tab .nav-tabs .up {
+  display: block;
+  padding: 10px;
+  font-weight: 500;
+  text-align: center;
+  z-index: 1;
+  position: relative;
+  transition: all 0.3s ease 0s;
+  font-size: 1.3vw;
+  color: black;
+  background: rgba(255, 255, 255, 0.12);
+  border-radius: 10px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(0.5px);
+  -webkit-backdrop-filter: blur(0.5px);
+  border: 1px solid rgba(255, 255, 255, 0.28);    
+}
+.tab .nav-tabs .down:before{
+  content: "";
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  margin: 0 auto;
+  position: absolute;
+  top: -40px;
+  left: 0;
+  right: 0;
+  background: rgba(255, 255, 255, 0.60);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5.1px);
+  -webkit-backdrop-filter: blur(5.1px);
+  border: 1px solid rgba(255, 255, 255, 0.55);  
+
+
+}
+.tab .nav-tabs .up:before{
+    content: "";
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    margin: 0 auto;
+    position: absolute;
+    bottom: -43px;
+    left: 0;
+    right: 0;
+    background: rgba(255, 255, 255, 0.60);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5.1px);
+    -webkit-backdrop-filter: blur(5.1px);
+    border: 1px solid rgba(255, 255, 255, 0.55);    
+}
+.tab .nav-tabs .down.active:before{
+  background: #ec6105;
+  border: 2px solid #000;
+  box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.25);
+  transform: scale(2);
+}
+.tab .nav-tabs .up.active:before{
+  background: #ec6105;
+  border: 2px solid #000;
+  box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.25);
+  transform: scale(2);
+}
+
+/* .tab .tab-content{
+    padding: 20px;
+    margin-top: 0;
+    border-radius: 0 0 5px 5px;
+    font-size: 15px;
+    color: #7a9181;
+    background: #fff;
+    line-height: 30px;
+}
+.tab .tab-content h3{
+    font-size: 24px;
+    margin-top: 5px;
+} */
