--- a/conference-dashboard-react/src/App.css
+++ b/conference-dashboard-react/src/App.css
@@ -934,7 +934,7 @@ border: 1px solid rgba(255, 255, 255, 0.3);
   height: 0.9vh;
   border-bottom: 0.1 solid rgba(255, 255, 255, 0.55);
   position: absolute;
-  margin-top: 12vh;
+  margin-top: 6vw;
 
   -webkit-border-radius: 9px;
   -moz-border-radius: 9px;
@@ -977,7 +977,14 @@ border: 1px solid rgba(255, 255, 255, 0.3);
     border: 1px 3px 1px 3px solid #fff;
     background-color: #fff ;
 }
+.tab .nav-tabs .down.down-bakhsh {
+  margin-top: 8.7vw;
+  margin-right: 0;
+} 
+.tab .nav-tabs .up.up-bakhsh {
+  margin-right: 0;
 
+} 
 .tab .nav-tabs .down {
   display: block;
   padding: 10px;
@@ -987,7 +994,7 @@ border: 1px solid rgba(255, 255, 255, 0.3);
   z-index: 1;
   position: relative;
   transition: all 0.3s ease 0s;  
-  margin-top: 62px;
+  margin-top: 5vw;
   font-size: 1.2vw;
   background: rgba(255, 255, 255, 0.12);
 border-radius: 10px;
@@ -996,7 +1003,6 @@ backdrop-filter: blur(0.5px);
 -webkit-backdrop-filter: blur(0.5px);
 border: 1px solid rgba(255, 255, 255, 0.28);
 margin-right: 3px;
-
 }
 .tab .nav-tabs .up {
   display: block;
@@ -1006,7 +1012,7 @@ margin-right: 3px;
   z-index: 1;
   position: relative;
   transition: all 0.3s ease 0s;
-  font-size: 1.3vw;
+  font-size: 1.2vw;
   color: black;
   background: rgba(255, 255, 255, 0.12);
   border-radius: 10px;
@@ -1024,7 +1030,7 @@ margin-right: 3px;
   border-radius: 50%;
   margin: 0 auto;
   position: absolute;
-  top: -6.5vh;
+  top: -3.1vw;
   left: 0;
   right: 0;
   background: rgba(255, 255, 255, 0.60);
@@ -1042,7 +1048,7 @@ margin-right: 3px;
     border-radius: 50%;
     margin: 0 auto;
     position: absolute;
-    bottom: -6.3vh;
+    bottom: -3.1vw;
     left: 0;
     right: 0;
     background: rgba(255, 255, 255, 0.60);
